Changed script loading order, added canvas class script

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 		</div>
 
 		<!-- Scripts -->
-		<script src="js/main.js" charset="utf-8"></script>
+		<script src="js/class.vector.js" charset="utf-8"></script>
 		<script src="js/class.road.js" charset="utf-8"></script>
 		<script src="js/class.segment.js" charset="utf-8"></script>
-		<script src="js/class.vector.js" charset="utf-8"></script>
 		<script src="js/class.vehicle.js" charset="utf-8"></script>
+		<script src="js/class.canvas.js" charset="utf-8"></script>
+
+		<script src="js/main.js" charset="utf-8"></script>
 		<!-- <script src="js/class.road.js" charset="utf-8"></script> -->
 	</body>
 </html>
