Getting ready to HTML data

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 			<canvas id="map"></canvas>
 		</div>
 
+		<div class="data">
+			<p id="data"></p>
+		</div>
+
 		<!-- Scripts -->
 		<script src="js/class.vector.js" charset="utf-8"></script>
 		<script src="js/class.road.js" charset="utf-8"></script>
