Added pause button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 			<canvas id="map"></canvas>
 		</div>
 
+		<button onclick="pause = !pause; canvas.update();">Pause/Resume</button>
+
 		<div class="data">
 			<p id="data"></p>
 		</div>
